@@ -1,7 +1,7 @@
 <?php
 DrawHeader(ProgramTitle());
 
-$extra['SELECT'] = ',(COALESCE((SELECT SUM(f.AMOUNT) FROM ACCOUNTING_SALARIES f WHERE f.STAFF_ID=s.STAFF_ID AND f.SYEAR=s.SYEAR),0)-COALESCE((SELECT SUM(p.AMOUNT) FROM ACCOUNTING_PAYMENTS p WHERE p.STAFF_ID=s.STAFF_ID AND p.SYEAR=s.SYEAR),0)) AS BALANCE';
+$extra['SELECT'] = ",(COALESCE((SELECT SUM(f.AMOUNT) FROM ACCOUNTING_SALARIES f WHERE f.STAFF_ID=s.STAFF_ID AND f.SYEAR=s.SYEAR AND f.SCHOOL_ID='".UserSchool()."'),0)-COALESCE((SELECT SUM(p.AMOUNT) FROM ACCOUNTING_PAYMENTS p WHERE p.STAFF_ID=s.STAFF_ID AND p.SYEAR=s.SYEAR AND p.SCHOOL_ID='".UserSchool()."'),0)) AS BALANCE";
 
 $extra['columns_after'] = array('BALANCE'=>_('Balance'));
 
